# snuifw

./: .gitignore  BUILD  README.md  WORKSPACE
docs/: examples.md  overview.md
example/app/: BUILD.bazel  example_components.cpp  example_todo.cpp
example/proof/: BUILD.bazel  example_app_glfw.cpp  example_draw_skia.cpp
example/usage/: BUILD.bazel  example_app_layers.cpp  example_component.cpp  example_dom.cpp
snuifw/: deps.bzl
src/: BUILD.bazel
src/snuifw/: BUILD.bazel  Context.cpp  Context.h  TopContext.cpp  TopContext.h  common.h  context.cpp  context.h  dom.cpp  dom.h  snuifw.h  store.hpp
src/snuifw/application/: BUILD.bazel  IApplicationContext.h  IApplicationLayer.h  IApplicationWindow.h  application.h  core.cpp  internal.h
src/snuifw/application/glfw/: BUILD.bazel  GlfwApplicationLayer.cpp  GlfwApplicationLayer.h  glfw.h  internal.h
src/snuifw/application/sdl/: BUILD.bazel
src/snuifw/dom/: DomContext.cpp  DomContext.h  DomRoot.cpp  DomRoot.h  builder.hpp  dom.h  interfaces.cpp  interfaces.h  layout.h
src/snuifw/dom/fundamental/: simple.cpp  simple.h  stack.h  text.cpp  text.h
src/snuifw/dom/fundamentals/: containers.cpp  containers.h  simple.cpp  simple.h  text.cpp  text.h
src/snuifw/dom/layout/: flow.cpp  flow.h  simple.h
src/snuifw/draw/: draw.h  interfaces.h  skia.cpp  skia.h
src/snuifw/draw/skia/: internal.h
src/snuifw/fundamentals/: containers.cpp  containers.h  text.cpp  text.h
src/snuifw/input/: IInputLayer.hpp  input.h
src/snuifw/literal/: color.hpp  literal.h  rect.hpp  size.hpp
src/snuifw/store/: store.hpp
src/snuifw/store/key/: store.h  store.hpp
src/snuifw/store/window/: store.h  store.hpp
src/snuifw/util/: helpers.hpp  main.hpp  type.hpp  util.h  window.h
test/: example.cpp  example_dom.cpp  example_glfw.cpp  example_h3.cpp  example_model.cpp  example_skia.cpp
test/example_h3/: example_h3.cpp
