
cc_binary(
    name = "todo",
    srcs = glob(["example_todo.cpp"]),
    deps = [
        "//:snuifw",
    ],

    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20"],
        "//conditions:default": ["-std=c++20"],
    }),
)

cc_binary(
    name = "components",
    srcs = glob(["example_components.cpp"]),
    deps = [
        "//:snuifw",
    ],

    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20"],
        "//conditions:default": ["-std=c++20"],
    }),
)
