
cc_binary(
    name = "app_layers",
    srcs = glob(["example_app_layers.cpp"]),
    deps = [
        "//:snuifw",
    ],

    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20"],
        "//conditions:default": ["-std=c++20"],
    }),
)


cc_binary(
    name = "dom",
    srcs = glob(["example_dom.cpp"]),
    deps = [
        "//:snuifw",
    ],

    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20"],
        "//conditions:default": ["-std=c++20"],
    }),
)

cc_binary(
    name = "component",
    srcs = glob(["example_component.cpp"]),
    deps = [
        "//:snuifw",
    ],

    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20"],
        "//conditions:default": ["-std=c++20"],
    }),
)
